# sample_osx_gl

./: AppDelegate.h  AppDelegate.m  CMakeLists.txt  Info-CMake.plist  MyOpenGLView.h  MyOpenGLView.mm  main.mm  simple_gl_triangle.cc  simple_gl_triangle.h
